# position-fidelity-diversity-metrics-flawed

./: .gitignore  LICENSE  README.md  Snakefile  aggregate_pass_fail_tables.py  check_pass_fails.py  compile_result_table.py  experiment_config.py  pyproject.toml  run_sanity_check.py  sanity_check_criteria.py
metrics/: __init__.py  metric_computer.py  pp_pr.py  prdc.py
metrics/alpha_precision_beta_recall/: __init__.py  alpha_precision_beta_recall_computer.py  evaluation.py
metrics/alpha_precision_beta_recall/representations/: OneClass.py  networks.py
metrics/precision_recall_cover/: GenerativeMetrics.py  precision_recall_cover_computer.py
metrics/sym_precision_recall/: manifmetric.py  sym_precision_recall_computer.py
plotting/: common.py  distribution_visualisations.ipynb  plot_discrete_experiments.ipynb  plot_gauss_experiments.ipynb  plot_hypercube_experiments.ipynb  plot_hypersphere_experiments.ipynb  plot_mode_dropping_experiments.ipynb  print_pass_fail_tables.ipynb
sanity_checks/: discrete.py  gaussian.py  gaussian_mixture.py  hypercube.py  hypersphere_surface.py  torus.py
