[tool.poetry]
name = "synthetic-data-metrics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
scipy = "^1.14.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
einops = "^0.8.0"
tqdm = "^4.66.5"
scikit-learn = "^1.5.1"
torch = "^2.4.1"
pytest = "^8.3.3"
snakemake = "^7.32.3"
pulp = "2.7.0" # Fix snakemake bug
prdc = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
